# Autonomous-SWE-Agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.serve  README.md  TODO.md  docker-compose.yml  fly.toml  prometheus.yml  pyproject.toml  render.yaml  requirements-serve.txt
.github/workflows/: ci.yml
agent/: __init__.py  context.py  llm.py  loop.py  prompts.py  providers.py
agent/tools/: __init__.py  bash.py  editor.py  search.py
agentless/: __init__.py  localize.py  pipeline.py  repair.py  validate.py
api/: main.py  schemas.py
eval/: __init__.py  harness.py  record_run.py  run_eval.py
frontend/: .env.example  .gitignore  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/api/benchmark/: route.ts
frontend/app/api/providers/: route.ts
frontend/components/: Architecture.tsx  Benchmark.tsx  DemoConsole.tsx  Hero.tsx
frontend/lib/: api.ts  replay.ts  types.ts
github_integration/: __init__.py  issue_fetcher.py  pr_creator.py
observability/: __init__.py  metrics.py  tracing.py
sandbox/: Dockerfile.sandbox  __init__.py  docker_workspace.py
tests/: test_context.py  test_harness.py  test_loop.py  test_providers.py  test_tools.py
